compiler/plc_xml/src/model/snapshots/plc_cfc__model__variables__tests__variable_with_connection_point_in.snap
---
source: compiler/plc_cfc/src/model/variables.rs
expression: visit_variable(&mut reader)
---
Ok(
    {
        "formalParameter": "",
        "negated": "false",
    },
)
